# sdkwork-video

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json
apis/: README.md
apps/: README.md
apps/sdkwork-video-flutter-mobile/: .env.example  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pubspec.yaml  sdkwork.app.config.json
apps/sdkwork-video-flutter-mobile/.sdkwork/: README.md
apps/sdkwork-video-flutter-mobile/.sdkwork/plugins/: README.md
apps/sdkwork-video-flutter-mobile/.sdkwork/skills/: README.md
apps/sdkwork-video-flutter-mobile/config/app/: runtime-env.development.example.json  runtime-env.production.example.json  runtime-env.staging.example.json  runtime-env.test.example.json
apps/sdkwork-video-flutter-mobile/config/host/: flutter.staging.example.json
apps/sdkwork-video-flutter-mobile/docs/: INDEX.yaml  README.md
apps/sdkwork-video-flutter-mobile/lib/: app.dart  auth_gate.dart  main.dart
apps/sdkwork-video-flutter-mobile/lib/bootstrap/: environment.dart  host_adapters.dart  iam_runtime.dart  routes.dart  runtime.dart  sdk_clients.dart
apps/sdkwork-video-flutter-mobile/specs/: dependency.composition.json
apps/sdkwork-video-h5/: AGENTS.md  CODEX.md  README.md  index.html  package.json  sdkwork.app.config.json  vite.config.ts
apps/sdkwork-video-h5/.sdkwork/: README.md
apps/sdkwork-video-h5/.sdkwork/plugins/: README.md
apps/sdkwork-video-h5/.sdkwork/skills/: README.md
apps/sdkwork-video-h5/config/browser/: runtime-env.development.example.json  runtime-env.production.example.json  runtime-env.staging.example.json  runtime-env.test.example.json
apps/sdkwork-video-h5/config/host/: capacitor.development.example.json
apps/sdkwork-video-h5/docs/: INDEX.yaml  README.md
apps/sdkwork-video-h5/specs/: dependency.composition.json
apps/sdkwork-video-h5/src/: App.tsx  AuthGate.tsx
apps/sdkwork-video-h5/src/bootstrap/: iamRuntime.ts  runtime.ts  tokenManager.ts
apps/sdkwork-video-pc/: AGENTS.md  README.md  index.html  package.json  sdkwork.app.config.json  vite.config.ts
apps/sdkwork-video-pc/.sdkwork/: .gitignore  README.md
apps/sdkwork-video-pc/.sdkwork/plugins/: README.md
apps/sdkwork-video-pc/.sdkwork/skills/: README.md
apps/sdkwork-video-pc/docs/: INDEX.yaml  README.md
apps/sdkwork-video-pc/specs/: README.md  dependency.composition.json
apps/sdkwork-video-pc/src/: App.tsx
configs/: README.md
crates/: README.md
crates/sdkwork-api-video-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-video-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-video-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-video-standalone-gateway/: Cargo.toml
crates/sdkwork-api-video-standalone-gateway/specs/: component.spec.json
crates/sdkwork-api-video-standalone-gateway/src/: main.rs
crates/sdkwork-video-core-rust/: Cargo.toml  README.md
crates/sdkwork-video-core-rust/src/: dispatch.rs  drive.rs  lib.rs  models.rs  provider_result.rs  text.rs
crates/sdkwork-video-core-rust/tests/: video_core_standard.rs
crates/sdkwork-video-generation-mcp-service/: Cargo.toml  README.md
crates/sdkwork-video-generation-mcp-service/specs/: README.md  component.spec.json
crates/sdkwork-video-generation-mcp-service/src/: catalog.rs  dto.rs  error.rs  handler.rs  lib.rs  task_store.rs  transport.rs
crates/sdkwork-video-generation-mcp-service/tests/: mcp_contract_standard.rs
crates/sdkwork-video-generation-provider-adapter/: Cargo.toml  README.md
crates/sdkwork-video-generation-provider-adapter/specs/: README.md  component.spec.json
crates/sdkwork-video-generation-provider-adapter/src/: adapter.rs  lib.rs  normalization.rs  requests.rs  routing.rs
crates/sdkwork-video-generation-provider-adapter/tests/: provider_adapter_standard.rs
crates/sdkwork-video-generation-provider-spi/: Cargo.toml  README.md
crates/sdkwork-video-generation-provider-spi/specs/: component.spec.json
crates/sdkwork-video-generation-provider-spi/src/: error.rs  lib.rs  provider.rs  registry.rs
crates/sdkwork-video-generation-provider-spi/tests/: provider_spi_standard.rs
crates/sdkwork-video-generation-service/: Cargo.toml  README.md
crates/sdkwork-video-generation-service/specs/: component.spec.json
crates/sdkwork-video-generation-service/src/: lib.rs  service.rs
crates/sdkwork-video-generation-service/tests/: provider_service_standard.rs
crates/sdkwork-video-provider-claw-router-rust/: README.md
crates/sdkwork-video-provider-claw-router-rust/src/: gateway.rs  support.rs
crates/sdkwork-video-service-rust/: Cargo.toml
crates/sdkwork-video-service-rust/specs/: README.md  component.spec.json
crates/sdkwork-video-service-rust/src/: lib.rs  models.rs  planning.rs
crates/sdkwork-video-service-rust/tests/: video_generation_service_standard.rs
deployments/: README.md
docs/: INDEX.yaml  README.md
docs/architecture/decisions/: ADR-20260719-video-generation-provider-spi.md
docs/architecture/tech/: TECH_ARCHITECTURE.md
docs/product/prd/: PRD.md
examples/: README.md
jobs/: README.md
plugins/: README.md
scripts/: README.md
sdks/: README.md
specs/: iam.module.manifest.json
tests/: README.md
tools/: README.md
(+23 files in other folders)
