[workspace]
resolver = "2"
members = [
    "crates/sdkwork-api-video-assembly",
    "crates/sdkwork-video-core-rust",
    "crates/sdkwork-video-service-rust",
    "crates/sdkwork-video-generation-provider-spi",
    "crates/sdkwork-video-generation-service",
    "crates/sdkwork-video-generation-mcp-service",
    "crates/sdkwork-video-generation-provider-adapter",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
rmcp = { version = "2.2.0", default-features = false, features = ["server", "macros", "schemars", "transport-io", "transport-streamable-http-server"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
# SDKWork workspace members - declared once at workspace root
sdkwork_video_core = { path = "crates/sdkwork-video-core-rust" }
sdkwork_video_service = { path = "crates/sdkwork-video-service-rust" }
sdkwork-video-generation-provider-spi = { path = "crates/sdkwork-video-generation-provider-spi" }
sdkwork-video-generation-service = { path = "crates/sdkwork-video-generation-service" }
sdkwork-video-generation-mcp-service = { path = "crates/sdkwork-video-generation-mcp-service" }
sdkwork-video-generation-provider-adapter = { path = "crates/sdkwork-video-generation-provider-adapter" }
clawrouter-open-sdk = { path = "../sdkwork-clawrouter/sdks/clawrouter-open-sdk/clawrouter-open-sdk-rust/generated/server-openapi" }
sdkwork-drive-workspace-service = { path = "../sdkwork-drive/crates/sdkwork-drive-workspace-service" }
