[package]
name = "sdkwork-video-generation-provider-adapter"
version.workspace = true
edition.workspace = true
description = "Generated SDK adapter for SDKWork video generation providers."

[dependencies]
async-trait = "0.1"
clawrouter-open-sdk.workspace = true
sdkwork-video-generation-provider-spi.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
