[package]
name = "sdkwork-video-generation-service"
version.workspace = true
edition.workspace = true
description = "Unified SDKWork video generation service entrypoint."

[dependencies]
async-trait = "0.1"
sdkwork-video-generation-provider-spi.workspace = true

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
